--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -1,26 +1,9 @@
-name: Deploy Astro site to Pages
-
-on:
-  push:
-    branches: ["master"] # change to "main" if that's your default
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
-env:
-  BUILD_PATH: "." # set to subfolder like "apps/site" for monorepos
-
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    env:
+      BUILD_PATH: "."   # change if your Astro app lives in a subfolder
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -48,19 +31,20 @@ jobs:
             exit 1
           fi
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20" # or "22"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
-          cache-dependency-path: ${{ env.BUILD_PATH }}/${{ steps.detect-package-manager.outputs.lockfile }}
-
-      # pnpm (if needed)
+      # ✅ Install pnpm BEFORE setup-node so caching 'pnpm' won't explode
       - name: Setup pnpm
         if: steps.detect-package-manager.outputs.manager == 'pnpm'
         uses: pnpm/action-setup@v4
         with:
           version: 9
+          run_install: false
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"              # or "22"
+          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          cache-dependency-path: ${{ env.BUILD_PATH }}/${{ steps.detect-package-manager.outputs.lockfile }}
 
       - name: Setup Pages
         id: pages
@@ -78,15 +62,3 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ${{ env.BUILD_PATH }}/dist
-
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
