--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -1,12 +1,69 @@
-            - name: Astro Deploy
-  # You may pin to the exact commit or the version.
-  # uses: withastro/action@acfe56dffc635abfb9506c77d51ce097030360d1
-  uses: withastro/action@v2.0.0
-  with:
-    # The node version to use
-    node-version: # optional, default is 20
-    # You may specify your preferred package manager (one of `npm | yarn | pnpm | bun` and an optional `@<version>` tag). Otherwise, the package manager will be automatically detected.
-    package-manager: # optional, default is 
-    # Path of the directory containing your site
-    path: # optional, default is .
-          
+name: Deploy Astro site to Pages
+
+on:
+  push:
+    branches: ["master"]   # change to "main" if that's your default
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+env:
+  BUILD_PATH: "."          # set to your subfolder (e.g., "apps/blog") if needed
+
+jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: ${{ env.BUILD_PATH }}/package-lock.json
+
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v5
+
+      - name: Install dependencies (npm)
+        working-directory: ${{ env.BUILD_PATH }}
+        run: |
+          if [ -f "package-lock.json" ]; then
+            npm ci
+          else
+            npm install
+          fi
+
+      - name: Build with Astro
+        working-directory: ${{ env.BUILD_PATH }}
+        run: npx --no-install astro build \
+          --site "${{ steps.pages.outputs.origin }}" \
+          --base "${{ steps.pages.outputs.base_path }}"
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ${{ env.BUILD_PATH }}/dist
+
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
