--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -2,7 +2,7 @@ name: Deploy Astro site to Pages
 
 on:
   push:
-    branches: ["master"]   # change to "main" if that's your default
+    branches: ["master", "main"]   # works whether your default is master or main
   workflow_dispatch:
 
 permissions:
@@ -14,56 +14,25 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
-env:
-  BUILD_PATH: "."          # set to your subfolder (e.g., "apps/blog") if needed
-
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-          cache-dependency-path: ${{ env.BUILD_PATH }}/package-lock.json
-
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v5
-
-      - name: Install dependencies (npm)
-        working-directory: ${{ env.BUILD_PATH }}
-        run: |
-          if [ -f "package-lock.json" ]; then
-            npm ci
-          else
-            npm install
-          fi
-
-      - name: Build with Astro
-        working-directory: ${{ env.BUILD_PATH }}
-        run: npx --no-install astro build \
-          --site "${{ steps.pages.outputs.origin }}" \
-          --base "${{ steps.pages.outputs.base_path }}"
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ${{ env.BUILD_PATH }}/dist
-
   deploy:
-    name: Deploy
-    needs: build
+    name: Build & Deploy
     runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # Installs deps, builds, and uploads the Pages artifact for you.
+      - name: Install, build, and upload
+        uses: withastro/action@v2
+        with:
+          node-version: 20                    # default is 20; set 22 if you want
+          package-manager: npm@latest         # force npm so pnpm is never used
+          path: .                             # change to subfolder (e.g., apps/blog)
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
